feat: update role controller and swagger doc
